--- a/SPRING_MVC/Trigger/event-listener.yaml
+++ b/SPRING_MVC/Trigger/event-listener.yaml
@@ -3,8 +3,10 @@ kind: EventListener
 metadata:
   name: event-listener
 spec:
+  serviceAccountName: trigger
   triggers:
   - name: push-build-trigger
     template:
       name: build-trigger
-      
+    bindings:
+    - name: build-trigger-b
